benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul.rs
Time: 2025-09-15 20:34:30

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:34:24
   |
34 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:35:17
   |
35 |         Str2Int(result@) == Str2Int(v@) * power(2, n as nat)
   |                 ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:48:24
   |
48 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:49:17
   |
49 |         Str2Int(result@) == Str2Int(a@) + Str2Int(b@)
   |                 ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:34:24
   |
34 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:35:17
   |
35 |         Str2Int(result@) == Str2Int(v@) * power(2, n as nat)
   |                 ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:48:24
   |
48 |         ValidBitString(result@),
   |                        ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:49:17
   |
49 |         Str2Int(result@) == Str2Int(a@) + Str2Int(b@)
   |                 ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
